--- a/SukonbuDiscordBot/packages.config
+++ b/SukonbuDiscordBot/packages.config
@@ -8,6 +8,7 @@
   <package id="Discord.Net.Webhook" version="3.15.3" targetFramework="net472" />
   <package id="Discord.Net.WebSocket" version="3.15.3" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
